--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="CSS/reset.css"/>
+  <link rel="stylesheet" href="CSS/base.css"/>
+  <link rel="stylesheet" href="CSS/layout.css"/>
+  <link rel="stylesheet" href="CSS/modules.css"/>
+  
+  <title>SMACCS and Responsie Web Design</title>
+</head>
 
+<body>
+  <header>
+
+  </header>
+
+  <main>
+    <div id=a>a</div>
+    <div id=b>b</div>
+    <div id=c>c</div>
+    <div id=d>d</div>
+    <div id=e>e</div>
+    <div id=f>f</div>
+    <div id=g>g</div>
+    <div id=h>h</div>
+    <div id=i>i</div>
+    
+
+  </main>
+
+  <footer>
+
+  </footer>
+  
+  
+</body>
+</html>
