added links to css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="CSS/layout.css"/>
   <link rel="stylesheet" href="CSS/modules.css"/>
   
-  <title>SMACCS and Responsie Web Design</title>
+  <title>Responsie Web Design</title>
 </head>
 
 <body>
